fix spacing issue between two paragraphs when header is inbetween

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -85,7 +85,7 @@
     @apply leading-6 font-font-sans text-neutral-700 mb-1;
   }
   /* leave a blank line between two <p> tags */
-  .markdown-view p ~ p {
+  .markdown-view p + p {
     @apply mt-[24px];
   }
 
